# Bamhbi_submodules

./: .gitignore  Base_subroutine.f90  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CalculateBacteria.f90  CalculateDOM.f90  CalculateDiatoms.f90  CalculateEmiliana.f90  CalculateFlagellates.f90  CalculateGelatinous.f90  CalculateMesozoo.f90  CalculateMicroZoo.f90  CalculateNoctiluca.f90  ChemicalDynamics.f90  LICENSE  README.md  SECURITY.md  bamhbi_model_library.f90  bamhbi_utilities.F90  bamhbi_utilities.f90  fabm-ulg-nemo_bamhbi.yaml  fabm.yaml  light_fulloptics.F90  mkdocs.yml  ulg_model_library.F90
.github/workflows/: docs.yml  pages.yml
Databases/: DATABASE_FULL.txt  Functions_full_database.txt  Parameters.txt  Tracer_database.txt  Tracers.txt  raw_bambhi_yaml_new.txt
bacteria/: bacteria.F90  bacteria.f90
chem/: chemical.F90  chemical.f90
docs/: index.md  overview.md
docs/process/: bacteria.md  chemical.md  diatoms.md  dom.md  emiliana.md  flagellates.md  gelatinous.md  mesozoo.md  microzoo.md  noctiluca.md
docs/reference/: diagnostics.md  parameters.md  tracers.md
dom/: dom.F90  dom.f90
fortran/: bamhbi_utilities.F90  gotm.yaml  ulg_model_library.F90
fortran/Databases/: Diagnostics.txt  Modules.txt
fortran/bacteria/: bacteria.F90
fortran/chem/: chemical.F90
jellyfish/: gelatinous.F90  gelatinous.f90  noctiluca.F90  noctiluca.f90
phytoplankton/: diatoms.F90  diatoms.f90  emiliana.F90  emiliana.f90  flagellates.F90  flagellates.f90
zooplankton/: mesozoo.F90  mesozoo.f90  microZoo.f90  microzoo.F90
(+3 files in other folders)
